# candyman

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/client/: mod.rs  script.rs
src/commands/: create.rs  list_files.rs  mod.rs
src/lexer/: helpers.rs  mod.rs  types.rs
src/md/: parser.rs
src/parser/: grammar.pest  mod.rs
src/types/: mod.rs
