[package]
name = "candyman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored_json = "3.2"
deno_core = "0.195"
markdown = "0.3"
rustyline = "12.0"
toml = "0.7"
tokio = "1.29"

[dependencies.ureq]
version = "2.7"
features = ["json"]
